--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/stack": "^6.3.11",
+    "axios": "^1.3.0",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
